--- a/plays/requirements.yml
+++ b/plays/requirements.yml
@@ -2,3 +2,6 @@
 - src: https://github.com/daniel-ds/ansible-repo.git
   version: master
   name: multi-roles
+- src: https://github.com/daniel-ds/ansible-repo.git
+  version: master
+  name: multi-roles2
